[project]
name = "retphylotda"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "network-lab-tda",
]

[tool.uv.sources]
network-lab-tda = { path = "../network-lab-tda", editable = true}

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
pythonpath = ["src"]


